# opal-uefi-greeter

./: Cargo.toml  build-pba.sh  config-example  readme.md
src/: error.rs  main.rs  nvme_device.rs  nvme_passthru.rs  secure_device.rs  util.rs
src/opal/: mod.rs  session.rs
