[package]
name = 'opal-uefi-greeter'
version = '0.1.0'
authors = ['Anton Bulakh <self@necauqua.dev>']
edition = '2018'
license = 'MIT'

[dependencies]
rlibc = '1.0'

wchar = '0.11'
uefi = { version = "0.23", features = ["alloc", "global_allocator", "logger"] }
uefi-services = '0.20'
uefi-raw = '0.2'

bitflags = '2.3'
seq-macro = '0.3'

pbkdf2 = { version = "0.12", default-features = false }
sha-1 = { version = "0.10", default-features = false, features = ['force-soft'] }
hmac = { version = "0.12", default-features = false }

log = { version = '0.4', default-features = false }
